--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 /*css reset*/
-body, div, ul, li, th, td, p br {
+html, body, div, ul, li, th, td, p br {
   margin: 0;
   padding: 0;
   font-family: "微軟正黑體, Microsoft YaHei", "Source Han Sans CN", "SimHei", "ST Heiti", Tahoma, Verdana, Geneva, sans-serif;
@@ -14,9 +14,9 @@ ol, ul {
 a {
   text-decoration: none;
 }
-html,
 body {
-  margin: 0;
+  color: #333;
+  background-color: rgba(242, 242, 242, 1);
 }
 h1 {
   font-size: 4em;
